# fastapi-nats-uvicorn-example

./: .flake8  .gitignore  README.md  pyproject.toml
tp2/: __init__.py  __main__.py  config.py  natscbs.py
tp2/webserver/: __init__.py  root.py
